--- a/src/components/View.css
+++ b/src/components/View.css
@@ -80,7 +80,7 @@
 
 .settings-button {
   padding: 0.5rem 1rem;
-  background-color: #2196F3;
+  /* background-color: #2196F3; */
   color: white;
   border: none;
   border-radius: 4px;
