--- a/src/components/View.css
+++ b/src/components/View.css
@@ -210,7 +210,7 @@
 .panorama-image {
   width: 100%;
   height: 100%;
-  /* background-image: url('/panorama-placeholder.jpg'); */
+  background-image: url('/public/assets/panorama-placeholder.png');
   background-size: cover;
   background-position: center;
 }
@@ -227,8 +227,8 @@
 }
 
 .record-button, .location-button, .files-button {
-  width: 48px;
-  height: 48px;
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
   border: none;
   display: flex;
@@ -254,25 +254,25 @@
 }
 
 .record-icon {
-  width: 16px;
-  height: 16px;
+  width: 12px;
+  height: 12px;
   background-color: #fff;
   border-radius: 2px;
 }
 
 .location-icon {
-  width: 24px;
-  height: 24px;
-  /* background-image: url('/location-icon.svg'); */
+  width: 32px;
+  height: 32px;
+  background-image: url('/public/assets/location-icon.svg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .files-icon {
-  width: 24px;
-  height: 24px;
-  /* background-image: url('/files-icon.svg'); */
+  width: 32px;
+  height: 32px;
+  background-image: url('/public/assets/files-icon.svg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
