--- a/src/components/View.css
+++ b/src/components/View.css
@@ -318,11 +318,11 @@
 }
 
 /* 底部进度条 */
-.progress-bar {
+/* .progress-bar {
   height: 4px;
   background-color: #333;
   position: relative;
-}
+} */
 
 .progress-indicator {
   position: absolute;
