--- a/src/components/PointCloud.css
+++ b/src/components/PointCloud.css
@@ -33,8 +33,8 @@
 .connection-button {
   display: flex;
   align-items: center;
-  gap: 8px;
-  padding: 8px 16px;
+  /* gap: 8px; */
+  padding: 4px 16px;
   border: none;
   border-radius: 20px;
   cursor: pointer;
