--- a/src/App.css
+++ b/src/App.css
@@ -60,8 +60,13 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: #f5f5f5;
+  height: 100%;
+  width: 100%;
+  margin: 0px; 
+  padding: 0px;
+  
 }
 
 .card-container {
