--- a/src/components/View.css
+++ b/src/components/View.css
@@ -1,11 +1,16 @@
 .view-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #000;
   color: #fff;
   position: relative;
   overflow: hidden;
+
+  margin: 0px; 
+  padding: 0px; 
+  width: 100%; 
+  height: 100%;
 }
 
 /* 顶部状态栏 */
