--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@ html, body {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 code {
@@ -34,4 +36,12 @@ code {
   html {
     font-size: 12px;
   }
+}
+
+
+#root { 
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
