--- a/src/components/ProjectDetail.css
+++ b/src/components/ProjectDetail.css
@@ -130,20 +130,20 @@
   background-color: #0b7dda;
 }
 
-.point-cloud-viewer {
+.preview-point-cloud-viewer {
   background-color: #fff;
   border-radius: 8px;
   padding: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.point-cloud-viewer h3 {
+.preview-point-cloud-viewer h3 {
   margin: 0 0 15px 0;
   font-size: 18px;
   color: #333;
 }
 
-.point-cloud-container {
+.preview-point-cloud-container {
   width: 100%;
   height: 500px;
   border-radius: 8px;
@@ -176,7 +176,7 @@
     height: 200px;
   }
   
-  .point-cloud-container {
+  .preview-point-cloud-container {
     height: 400px;
   }
 }
@@ -203,7 +203,7 @@
     width: 100%;
   }
   
-  .point-cloud-container {
+  .preview-point-cloud-container {
     height: 300px;
   }
 }
