--- a/src/components/View.css
+++ b/src/components/View.css
@@ -437,13 +437,13 @@
 }
 
 .camera-mode-button.firstPerson {
-  background-color: rgba(0, 100, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .camera-mode-button.thirdPerson {
-  background-color: rgba(0, 150, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .camera-mode-icon {
-  font-size: 24px;
+  /* font-size: 24px; */
 }
