--- a/src/components/View.css
+++ b/src/components/View.css
@@ -447,3 +447,12 @@
 .camera-mode-icon {
   /* font-size: 24px; */
 }
+
+.storage-info {
+  margin-left: 8px;
+  font-size: 12px;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 2px 6px;
+  border-radius: 4px;
+}
