--- a/src/components/View.css
+++ b/src/components/View.css
@@ -280,7 +280,7 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
 }
 
@@ -427,7 +427,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -464,7 +464,7 @@
   justify-content: center;
   width: 32px;
   height: 32px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   border: none;
   border-radius: 50%;
   color: white;
